tests/rosetta/out/Smalltalk/15-puzzle-solver.out
Object: Dictionary new: 8 "<0x7f6680812530>" error: Invalid argument FifteenPuzzleExample: key not found
SystemExceptions.NotFound(Exception)>>signal (ExcHandling.st:254)
SystemExceptions.NotFound(Exception)>>signal: (ExcHandling.st:264)
SystemExceptions.NotFound class>>signalOn:what: (SysExcept.st:731)
[] in Dictionary>>at: (Dictionary.st:139)
Dictionary>>at:ifAbsent: (Dictionary.st:149)
Dictionary>>at: (Dictionary.st:138)
UndefinedObject>>executeStatements (/tmp/15-puzzle-solver.st:5)
