tests/rosetta/out/Smalltalk/15-puzzle-solver.st
" Generated by Mochi compiler v0.10.30 on 2025-07-18T17:36:01Z
"
| testpkg |
testpkg := Dictionary from:{'Add'->[:a :b | a + b]. 'Pi'->3.14e0. 'Answer'->42}.
Transcript show: ((testpkg at: 'FifteenPuzzleExample') value) printString; cr.
